[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colins_lib"
version = "0.1.0"
description = "Personal pygame-based game engine"
authors = [
    { name="Colin Grasley" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pygame"
]

[tool.setuptools.packages.find]
where = ["."]